# matcha

./: .gitignore  pyproject.toml
backend/: __main__.py  docker-compose.yaml  helpers.py  ioc.py  resources.py  settings.py
backend/alembic/: env.py
backend/api/: error_handlers.py  events_endpoints.py  events_sockets.py  events_websockets.py  interests_endpoints.py  location_endpoints.py  locations.py  matcha_endpoints.py  mathca_endpoints.py  preference_endpoints.py  profile_endpoints.py  visits_endpoints.py
backend/auth/: __main__.py  auth_endpoints.py  auth_handle_mail.py  auth_tokens.py  endpoints.py  tokens.py
backend/events/: __init__.py  chat_events.py  system_events.py
backend/location/: __init__.py  location.py
backend/mathca/: matcha_search.py  matcha_visits.py  matches.py  mathcha_helpers.py  profiles.py
backend/models/: enums.py  models_base.py  models_enums.py  models_events.py  models_location.py  models_matcha.py  models_preferences.py  models_user.py  models_visits.py  user.py
backend/profile/: endpoints.py  profile_endpoints.py
backend/repositories/: __init__.py  auth.py  interfaces.py  location_repositories.py  profile.py  repo_auth.py  repo_chat.py  repo_interests.py  repo_interfaces.py  repo_location.py  repo_matcha.py  repo_preference.py  repo_profile.py  repo_system_events.py  repo_visits.py
backend/repositories_redis/: auth.py  (+3 more)
frontend/: .eslintrc  package-lock.json  package.json
sql/: chat_messages.sql  interests.sql  interests_profile.py  matches.sql  preferences.sql  profiles.sql  user_locations.sql  users.sql  visits.sql
(+13 files in other folders)
