[tool.poetry]
name = "matcha"
version = "0.1.0"
description = "Another one clone of Tinder"
authors = ["LsHanaha <kirik193@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
SQLAlchemy = "^1.4.41"
alembic = "^1.8.1"
dependency-injector = "^4.40.0"
fastapi-versioning = "^0.10.0"
envparse = "^0.2.0"
uvicorn = "^0.18.3"
loguru = "^0.6.0"
asyncpg = "^0.26.0"
databases = "^0.6.1"
fastapi-jwt-auth = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pybetter = "^0.4.1"
black = "^22.8.0"
isort = "^5.10.1"
docformatter = "^1.5.0"
pyupgrade = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
